--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -8,6 +8,7 @@
 @font-face {
   font-family: "GenEiLateMinN_v2";
   src: url("../fonts/GenEiLatin-Separate_v2.1/GenEiLateMinN_v2.ttf") format("truetype");
+  font-display: swap;
 }
 body {
   margin: auto;
@@ -19,7 +20,7 @@ body {
 div#__next {
   max-width: 400px;
   margin: auto;
-  border: 1.5rem #311b15 solid;
+  border: 1rem #311b15 solid;
   box-sizing: content-box;
   background-color: rgb(253, 250, 220);
 }
@@ -181,18 +182,18 @@ a.allTests {
   text-align: center;
 }
 .testsByGenre li {
-  color: #4b281f;
+  color: #2e2c0d;
   padding-bottom: 0.3rem;
 }
 .testsByGenre li:hover {
-  background-color: #754F44;
+  background-color: #5E654A;
   color: white;
   transition: 0.4s;
 }
 
 label.selectTestsNav {
   cursor: pointer;
-  background-color: #754F44;
+  background-color: #5E654A;
   color: white;
   width: 60%;
   margin: auto;
@@ -205,7 +206,7 @@ label.selectTestsNav {
 
 label.selectTestsNav + .testsByGenre {
   height: 0;
-  transition: 0.5s ease-in-out;
+  transition: 0.5s;
   overflow: hidden;
 }
 
@@ -242,7 +243,7 @@ input#selectTestsNav:checked + label.selectTestsNav::after {
 div.seeAllTests {
   text-align: center;
   cursor: pointer;
-  background-color: #754F44;
+  background-color: #5E654A;
   color: white;
   width: 60%;
   margin: 1rem auto;
@@ -268,7 +269,7 @@ ul.testsByStatus li {
   padding: 0.5rem 0.2rem;
   width: 35%;
   text-align: center;
-  font-size: 15px;
+  font-size: 13px;
   transition: 0.3s;
   border-radius: 10px 10px 0 0;
 }
@@ -280,6 +281,210 @@ ul.testsByStatus li.selected {
 .currentTests {
   background-color: #d9e0c4;
   padding: 0.5rem;
+}
+
+.pagingBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.3s;
+}
+.pagingBtn button {
+  cursor: pointer;
+  width: 100%;
+  border: none;
+  padding: 0.6rem;
+  background-color: #a56e5f;
+  transition: 0.3s;
+}
+.pagingBtn button:hover {
+  background-color: #744f45;
+}
+.pagingBtn button i {
+  color: white;
+  font-size: 18px;
+}
+.pagingBtn button:disabled {
+  cursor: not-allowed;
+  background-color: #f5e4de;
+}
+.pagingBtn button:nth-child(1) {
+  border-right: #311b15 2px solid;
+}
+.pagingBtn button:nth-child(2) {
+  border-left: #311b15 2px solid;
+}
+
+.currentTests div.PredictionTests:nth-child(n+2) {
+  border-top: #aa706b 2px dotted;
+}
+
+div.PredictionTests {
+  color: #5e664b;
+  padding: 1rem;
+}
+div.PredictionTests h4 {
+  color: #2e2c0d;
+  font-weight: 400;
+  position: relative;
+  display: flex;
+}
+div.PredictionTests h4::before {
+  position: absolute;
+  transform: translateX(-15px);
+  content: "";
+  display: block;
+  width: 10px;
+  height: 20px;
+  background-color: #2e2c0d;
+}
+div.PredictionTests small.publisher {
+  margin-top: 0.3rem;
+  display: block;
+  position: relative;
+  left: 12rem;
+}
+div.PredictionTests small.publisher a {
+  color: #5e664b;
+}
+div.PredictionTests .basicPoint {
+  padding-bottom: 0.5rem;
+  border-bottom: 2px #5E654A dashed;
+  color: #2e2c0d;
+}
+div.PredictionTests .genre {
+  padding: 0.5rem 0;
+}
+
+.testBody {
+  padding: 1rem;
+  color: #311b15;
+}
+.testBody h4 {
+  font-size: 20px;
+  margin-bottom: 0.5rem;
+}
+.testBody p {
+  color: #754F44;
+}
+.testBody p:nth-child(-n+5) {
+  margin-bottom: 0.5rem;
+}
+
+.navInTest {
+  position: relative;
+  height: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+.navInTest .goBack {
+  display: block;
+  height: 40px;
+  background-color: rgb(78, 137, 192);
+  border-radius: 0 2px 2px 0;
+  color: white;
+  padding: 0.5rem;
+  position: relative;
+  transform: translateX(20px);
+}
+.navInTest .goBack::before {
+  content: "";
+  display: block;
+  top: 50%; /* 将伪元素的顶部对齐到父元素的中心位置 */
+  left: 0;
+  margin-top: -20px; /* 将伪元素向上移动其高度的一半，使其与父元素垂直居中 */
+  width: 0;
+  height: 0;
+  border-top: 20px solid transparent; /* 三角形的上边 */
+  border-bottom: 20px solid transparent; /* 三角形的下边 */
+  border-right: 20px solid rgb(78, 137, 192); /* 三角形的右边，同时也是箭头的颜色 */
+  position: absolute;
+  transform: translateX(-20px);
+}
+.navInTest .editTests {
+  position: relative;
+  transform: translateX(15px);
+}
+.navInTest .editTests, .navInTest .deleteTest {
+  background-color: #976c45;
+  border-radius: 10px;
+  padding: 0.5rem;
+  height: 40px;
+}
+.navInTest .editTests a, .navInTest .editTests p, .navInTest .deleteTest a, .navInTest .deleteTest p {
+  color: white;
+}
+
+section.choicesSection {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  gap: 0.5rem;
+}
+section.choicesSection .choices {
+  background-color: #ddd;
+  padding: 0.2rem;
+}
+
+.testsTemplate {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem 1rem 0;
+  position: relative;
+}
+.testsTemplate::after {
+  content: "";
+  display: block;
+  height: 1rem;
+  background: url("/separatingLine/b_ornament_146_0S.png") no-repeat center center;
+  width: 100%;
+  margin: 0rem 1rem 1rem;
+}
+
+.toRules {
+  display: flex;
+}
+.toRules:hover::before, .toRules:hover::after {
+  background-color: #d9e0c4;
+  transition: 0.3s;
+}
+.toRules::before, .toRules::after {
+  content: "";
+  display: block;
+  background-color: #2e2c0d;
+  width: 10px;
+  height: 20px;
+  transition: 0.3s;
+}
+.toRules::before {
+  transform: translateX(-12px);
+}
+.toRules::after {
+  transform: translateX(12px);
+}
+
+.publishBtn {
+  margin: 1rem;
+  background-color: #aa706b;
+  padding: 0.5rem;
+  border-radius: 10px;
+  transition: background-color 0.3s;
+}
+.publishBtn a {
+  font-size: 18px;
+  font-weight: 800;
+  color: white;
+}
+.publishBtn:hover {
+  background-color: white;
+  outline: 2px #aa706b solid;
+}
+.publishBtn:hover a {
+  color: #aa706b;
 }
 
 footer {
