--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -20,7 +20,7 @@ body {
 div#__next {
   max-width: 400px;
   margin: auto;
-  border: 0.8rem #311b15 solid;
+  border: 0.6rem #311b15 solid;
   box-sizing: content-box;
   background-color: rgb(253, 250, 220);
 }
@@ -40,7 +40,11 @@ header {
   padding: 2rem;
   background: url("/header.svg") center center no-repeat #754F44;
   background-size: cover;
-  font-family: "Kaisei Opti", serif;
+  font-family: "GenEiLateMinN_v2", serif;
+}
+header h1 {
+  margin-top: 1.5rem;
+  line-height: 1.5em;
 }
 
 nav {
@@ -84,17 +88,24 @@ nav ul li:nth-child(n+3) {
   align-items: center;
   text-align: center;
   margin: 1rem auto;
-  height: 8rem;
+  height: 3rem;
   padding: 2rem;
   font-size: 22px;
-  background: url("/goToAbout.svg") no-repeat center;
-  background-color: rgb(255, 248, 239);
 }
 #goToAbout a {
+  display: block;
+  position: relative;
   font-size: 20px;
-  line-height: 10rem;
   color: #4b281f;
   font-weight: 900;
+}
+#goToAbout a::before {
+  content: "\f05a";
+  display: block;
+  position: absolute;
+  font-size: 20px;
+  transform: translate(-30px, 2px);
+  font-family: "Font Awesome 6 Free";
 }
 
 .latestTests, .latestNewses {
@@ -368,7 +379,7 @@ div.PredictionTests .genre {
   font-size: 13px;
   margin: 1rem 0;
 }
-.testBody .goToCheck {
+.testBody .goToCheck, .testBody .goToPredict {
   margin: 1rem auto;
   text-align: center;
   width: 50%;
@@ -378,6 +389,26 @@ div.PredictionTests .genre {
   padding: 0.5rem;
   border-radius: 10px;
   font-weight: 700;
+  transition: background-color 0.3s;
+}
+.testBody .goToCheck:hover, .testBody .goToPredict:hover {
+  background-color: white;
+  color: #f06d62;
+  outline: 2px #f06d62 solid;
+}
+.testBody .incorrectMsg {
+  color: #666;
+  border: 2px #666 solid;
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 5px;
+  padding: 0.6rem 1rem;
+  font-weight: 700;
+  font-size: 20px;
+  position: absolute;
+  z-index: 9;
+  right: 2rem;
+  top: 9rem;
+  transform: rotate(20deg);
 }
 .testBody .correctMsg {
   color: rgb(180, 57, 41);
@@ -484,8 +515,8 @@ div.PredictionTests .genre {
   z-index: 10;
 }
 
-main .alertMsg {
-  background-color: rgb(255, 255, 219);
+main .alertMsg, .pointAlert {
+  background-color: rgb(252, 252, 198);
   color: #976c45;
   border: 1px #976c45 solid;
   margin: 1rem auto;
@@ -494,6 +525,8 @@ main .alertMsg {
   border-radius: 5px;
   padding: 0.3rem;
   font-size: 14px;
+  justify-content: center;
+  align-items: center;
 }
 
 @keyframes showDes {
@@ -567,7 +600,6 @@ section.choicesSection {
   display: grid;
   font-size: 14px;
   grid-template-columns: 50% 50%;
-  grid-template-rows: 25% 25% 25% 25%;
   gap: 0.2rem;
   margin: 2rem 0;
   color: #754F44;
@@ -579,6 +611,7 @@ section.choicesSection .choices {
   border: 2px #976c45 solid;
   border-radius: 3px;
   box-shadow: 0 0 1px 1px rgba(97, 82, 42, 0.5);
+  min-height: 5rem;
 }
 section.choicesSection .choices .choiceInfo {
   border-bottom: 2px #976c45 solid;
@@ -593,7 +626,7 @@ section.choicesSection .choices .choiceContent {
   flex-wrap: wrap;
   padding: 0.3rem;
   text-align: center;
-  overflow-wrap: break-word;
+  overflow-wrap: anywhere;
   min-height: 3.5rem;
   vertical-align: middle;
 }
@@ -631,6 +664,7 @@ section.choicesSection .choices.selected.flag .choiceContent {
 }
 section.choicesSection .choices.answer {
   animation: answerGlow 2s infinite;
+  animation-delay: 2s;
   position: relative;
 }
 section.choicesSection .choices.answer::before {
@@ -641,19 +675,24 @@ section.choicesSection .choices.answer::before {
   width: 100%;
   height: 100%;
   background: white;
+  opacity: 0;
   border: 4px white solid;
   animation: answerShine 2s infinite;
+  animation-delay: 2s;
 }
 
 @keyframes answerGlow {
   0% {
     box-shadow: 0;
   }
-  70% {
+  50% {
     box-shadow: 0 0 50px white;
   }
-  100% {
+  75% {
     box-shadow: 0 0 20px white;
+  }
+  100% {
+    box-shadow: 0;
   }
 }
 @keyframes answerShine {
@@ -661,14 +700,17 @@ section.choicesSection .choices.answer::before {
     opacity: 0;
   }
   50% {
-    opacity: 0.5;
+    opacity: 0.4;
   }
   100% {
     opacity: 0;
   }
 }
-form {
+form.newTest {
   padding: 1rem;
+}
+
+form {
   color: #4b281f;
 }
 form label {
@@ -689,6 +731,108 @@ form select, form textarea {
   width: 100%;
   margin-bottom: 1rem;
   white-space: pre-wrap;
+}
+form label.test-deadline, form label.test-bonus {
+  display: inline;
+}
+form button {
+  cursor: pointer;
+  display: block;
+  margin: 1rem auto;
+  padding: 0.5rem 1rem;
+  font-size: 16px;
+  background-color: #aa706b;
+  color: white;
+  border: transparent 2px solid;
+  border-radius: 10px;
+  font-weight: 700;
+  transition: 0.3s;
+}
+form button:hover {
+  background-color: white;
+  color: #aa706b;
+  border: 2px #aa706b solid;
+}
+
+h4.test-title {
+  font-size: 20px;
+  margin-bottom: 0.5rem;
+  color: #4b281f;
+  margin-top: 1rem;
+}
+
+p.test-genre {
+  font-size: 14px;
+  margin-bottom: 0.5rem;
+  color: #754F44;
+}
+
+h4.test-title, p.test-genre {
+  margin-left: 1rem;
+}
+
+.CheckOut input[type=radio], .toPredict input[type=radio] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+.CheckOut input[type=radio] + label, .toPredict input[type=radio] + label {
+  margin: 0;
+  border-bottom: 2px transparent solid;
+  cursor: pointer;
+}
+.CheckOut input[type=radio]:checked + label, .toPredict input[type=radio]:checked + label {
+  background-color: #fff0ae;
+  border-bottom: 2px #fff0ae solid;
+}
+
+div.isFlag {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 2em;
+  margin-bottom: 1rem;
+  font-size: 16px;
+  background-color: rgb(255, 255, 219);
+  color: #493622;
+  border: 1px #493622 solid;
+  border-radius: 8px;
+  max-width: 40%;
+  margin: 0 auto 2rem;
+}
+div.isFlag label {
+  margin: 0;
+}
+div.isFlag input {
+  margin-right: 0.5rem;
+}
+
+div.usePoint {
+  margin-bottom: 1.5rem;
+  display: flex;
+  align-items: center;
+}
+div.usePoint label {
+  margin: 0;
+  color: #4b281f;
+}
+
+section.choicesSection .choices.toPredict.isSelected {
+  border: 2px solid #ccc;
+  box-shadow: none;
+}
+section.choicesSection .choices.toPredict.isSelected label {
+  background-color: #dfdfdf;
+}
+section.choicesSection .choices.toPredict.isSelected label .choiceInfo {
+  border-bottom: 2px solid #ccc;
+}
+section.choicesSection .choices.toPredict.isSelected label p, section.choicesSection .choices.toPredict.isSelected label .choiceInfo span {
+  color: white;
+}
+
+form.edit {
+  padding: 1rem;
 }
 
 .testsTemplate {
@@ -748,6 +892,133 @@ form select, form textarea {
 }
 .publishBtn:hover a {
   color: #aa706b;
+}
+
+.profileBody, .recordBody {
+  padding: 1rem;
+  color: #4b281f;
+}
+.profileBody a, .recordBody a {
+  color: #4b281f;
+}
+
+.profileBody {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  line-height: 2em;
+}
+.profileBody h4 {
+  align-self: flex-start;
+  font-size: 25px;
+  margin-bottom: 1rem;
+}
+.profileBody .expBar {
+  height: 0.5rem;
+  width: 300px;
+  background-color: #ccc;
+  margin: 1rem auto;
+  position: relative;
+  border-radius: 2px;
+}
+.profileBody .expBar small {
+  margin: 0.2rem;
+  display: block;
+  text-align: right;
+  width: 100%;
+}
+.profileBody .expBar .expBarIn {
+  background-color: rgb(78, 137, 192);
+  height: 0.5rem;
+  position: absolute;
+  border-radius: 2px 0 0 2px;
+  transition: width 0.3s;
+}
+.profileBody .penaCounter {
+  margin: 1rem 0;
+}
+
+.recordBody {
+  background-color: #e9d5b1;
+  margin: 0.5rem;
+}
+.recordBody .recordTitle {
+  font-size: 18px;
+  margin: 1rem 0;
+}
+.recordBody ul {
+  padding: 1rem;
+}
+.recordBody ul li {
+  margin-bottom: 0.8rem;
+  padding: 1rem;
+  position: relative;
+  background-color: #fff5eb;
+  border-radius: 10px;
+}
+.recordBody .publishRecordsList {
+  margin-bottom: 3rem;
+}
+.recordBody .predictRecordsList {
+  margin-bottom: 3rem;
+}
+.recordBody .predictRecordsList li p.counter {
+  text-align: right;
+  font-size: 14px;
+}
+.recordBody .predictRecordsList li .accurateMsg {
+  position: absolute;
+  top: -3px;
+  left: -25px;
+  background-color: rgb(180, 57, 41);
+  color: white;
+  padding: 3px 6px;
+  font-size: 10px;
+  transform: rotate(-30deg);
+  border: white 3px double;
+}
+
+form.signUp, form.login {
+  padding: 1rem;
+}
+form.signUp .alertMsg, form.login .alertMsg {
+  padding: 0.5rem;
+  margin-bottom: 2rem;
+  justify-content: center;
+}
+form.signUp .signUpNotice, form.login .signUpNotice {
+  display: block;
+  margin-bottom: 1rem;
+}
+form.signUp div, form.login div {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+  padding: 0;
+}
+form.signUp div label, form.login div label {
+  margin-bottom: 0;
+}
+form.signUp div input, form.login div input {
+  margin-bottom: 0;
+  height: 2em;
+  width: 15em;
+}
+form.signUp div.nickname, form.login div.nickname {
+  margin-bottom: 2rem;
+}
+
+form.login {
+  padding: 2rem 1rem 1rem;
+}
+form.login div.password {
+  margin-bottom: 2rem;
+}
+
+.pleaseLogin {
+  text-align: center;
+  margin: 2rem;
+  color: #311b15;
 }
 
 footer {
